--- a/popup/public/manifest.json
+++ b/popup/public/manifest.json
@@ -1,25 +1,22 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
-  "icons": [
-    {
-      "src": "favicon.ico",
-      "sizes": "64x64 32x32 24x24 16x16",
-      "type": "image/x-icon"
-    },
-    {
-      "src": "logo192.png",
-      "type": "image/png",
-      "sizes": "192x192"
-    },
-    {
-      "src": "logo512.png",
-      "type": "image/png",
-      "sizes": "512x512"
-    }
-  ],
-  "start_url": ".",
-  "display": "standalone",
-  "theme_color": "#000000",
-  "background_color": "#ffffff"
+  "manifest_version": 2,
+  "version": "0.0",
+  "name": "PubMed Symptoms Finder",
+  "description": "This extension helps doctors and patients to find closely related medical research papers given a list of symptoms and a list of possible diagnoses. This could save doctors or patients hours to read through loosely related papers.",
+  "author": "Shelden Shi, Isabella Lee-Rubio, Ningyu Gao",
+  "icons": {
+    "48": "48.png"
+  }, 
+  "browser_action": {
+    "default_title": "PubMed Symptoms Finder",
+    "default_icon": {
+      "16":"16.png",
+      "36":"36.png",
+      "120":"120.png"
+    },  
+    "default_popup": "index.html"
+  },
+  "permissions": [
+    "activeTab"
+  ]
 }
