--- a/popup/public/manifest.json
+++ b/popup/public/manifest.json
@@ -1,14 +1,14 @@
 {
   "manifest_version": 2,
   "version": "0.0",
-  "name": "PubMed Symptoms Finder",
+  "name": "Medical Resources Search Helper",
   "description": "This extension helps doctors and patients to find closely related medical research papers given a list of symptoms and a list of possible diagnoses. This could save doctors or patients hours to read through loosely related papers.",
   "author": "Shelden Shi, Isabella Lee-Rubio, Ningyu Gao",
   "icons": {
     "48": "48.png"
   }, 
   "browser_action": {
-    "default_title": "PubMed Symptoms Finder",
+    "default_title": "Medical Resources Search Helper",
     "default_icon": {
       "16":"16.png",
       "36":"36.png",
