--- a/popup/package.json
+++ b/popup/package.json
@@ -16,7 +16,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "start-backend": "cd ../backend && flask run --no-debugger",
+    "start-backend": "cd ../backend && venv/bin/flask run --no-debugger",
     "build": "./script/build.sh",
     "test": "react-scripts test",
     "text-backend": "cd ../backend && flask test",
