--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,7 @@
 /build
 
 # misc
+build
 *.db
 .DS_Store
 .env.local
@@ -25,3 +26,4 @@ __pycache__
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+test
