--- a/popup/package.json
+++ b/popup/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "gh-pages": "^3.1.0",
     "python-shell": "^2.0.3",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
@@ -17,7 +18,7 @@
   "scripts": {
     "start": "react-scripts start",
     "start-backend": "cd ../backend && venv/bin/flask run",
-    "build": "./script/build.sh",
+    "build": "react-scripts build",
     "test": "react-scripts test",
     "text-backend": "cd ../backend && flask test",
     "eject": "react-scripts eject"
