--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,8 +1,20 @@
-google-search-results
-requests
-regex
-beautifulsoup4
-flask
-python-dotenv
-Flask-SQLAlchemy
-numpy
+beautifulsoup4==4.9.3
+certifi==2020.12.5
+chardet==4.0.0
+click==7.1.2
+Flask==1.1.2
+Flask-SQLAlchemy==2.4.4
+google-search-results==2.0.0
+gunicorn==20.0.4
+idna==2.10
+itsdangerous==1.1.0
+Jinja2==2.11.2
+MarkupSafe==1.1.1
+numpy==1.19.5
+python-dotenv==0.15.0
+regex==2020.11.13
+requests==2.25.1
+soupsieve==2.1
+SQLAlchemy==1.3.22
+urllib3==1.26.2
+Werkzeug==1.0.1
