--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,7 @@
 
 # misc
 build
+*.zip
 *.db
 .DS_Store
 .env.local
@@ -21,6 +22,7 @@ build
 .env.test.local
 .env.production.local
 venv
+env
 __pycache__
 
 npm-debug.log*
